# security_deviceauth

./: BUILD.gn  README.md  README_zh.md  bundle.json  deviceauth_env.gni
services/: BUILD.gn  device_auth.c  deviceauth.gni  deviceauth_account.gni
services/authenticators/inc/account_related/: account_module.h  account_module_defines.h  account_multi_task_manager.h  account_task_main.h  account_version_util.h  auth_common.h  tcis_module_defines.h
services/authenticators/inc/account_related/creds_manager/: asy_token_manager.h  sym_token_manager.h
services/authenticators/inc/account_related/tcis_auth_token_manager/: tcis_auth_token_manager.h
services/authenticators/inc/account_unrelated/: das_module.h  das_task_main.h  das_token_manager.h  das_version_util.h
services/authenticators/inc/account_unrelated/pake_task/: das_asy_token_manager.h  pake_base_cur_task.h
services/authenticators/src/account_related/: account_module.c  account_multi_task_manager.c  account_task_main.c  account_version_util.c
services/authenticators/src/account_related/creds_manager/: asy_token_manager.c  sym_token_manager.c
services/authenticators/src/account_related_mock/: account_module_mock.c
services/authenticators/src/account_unrelated/: das_common.c  das_module.c  das_task_common.c  das_task_main.c  task_main.c
services/authenticators/src/account_unrelated/iso_task/: iso_client_task.c  iso_server_task.c  iso_task_common.c
services/authenticators/src/account_unrelated/pake_task/: pake_task_common.c
services/common/inc/: common_defs.h
services/common/inc/channel_manager/: channel_manager.h
services/common/inc/channel_manager/soft_bus_channel/: soft_bus_channel.h
services/common/inc/data_base/: database_manager.h  database_util.h
services/common/inc/task_manager/: task_manager.h
services/common/src/broadcast_manager/: broadcast_manager.c
services/common/src/callback_manager/: callback_manager.c
services/common/src/channel_manager/: channel_manager.c
services/common/src/channel_manager/soft_bus_channel/: soft_bus_channel.c
services/common/src/channel_manager/soft_bus_channel_mock/: soft_bus_channel_mock.c
services/common/src/data_base/: database_manager.c  database_util.c
services/data_manager/inc/: data_manager.h  database.h
services/data_manager/src/: data_manager.c  database_manager.c  database_util.c
services/frameworks/inc/: common_defs.h
services/frameworks/inc/module/: dev_auth_module_manager.h
services/frameworks/inc/permission_adapter/: permission_adapter.h
services/frameworks/src/module/: dev_auth_module_manager.c
services/frameworks/src/os_account_adapter/: os_account_adapter.cpp
services/frameworks/src/permission_adapter/: permission_adapter.cpp
services/frameworks/src/session/: session_manager.c
services/group_auth/inc/: base_group_auth.h
services/group_auth/inc/account_related_group_auth/: account_related_group_auth.h
services/group_auth/inc/session/: auth_session_common_defines.h  auth_session_common_util.h
services/group_auth/inc/session/auth_session/: auth_session_common.h  auth_session_util.h
services/group_auth/src/group_auth_manager/: group_auth_data_operation.c  group_auth_manager.c
services/group_auth/src/group_auth_manager/account_related_group_auth/: account_related_group_auth.c
services/group_auth/src/group_auth_manager/account_unrelated_group_auth/: account_unrelated_group_auth.c
services/group_auth/src/group_auth_manager_lite/: group_auth_manager_lite.c
services/group_auth/src/session/: auth_session_common_util.c
services/group_auth/src/session/auth_session/: auth_session_client.c  auth_session_common.c  auth_session_server.c  auth_session_util.c
services/group_manager/inc/: across_account_group.h  base_group.h  base_group_manager_task.h  group_manager.h  group_manager_common.h  group_operation.h  group_operation_common.h  peer_to_peer_group.h
services/group_manager/inc/broadcast_manager/: broadcast_manager.h
services/group_manager/inc/session/: bind_session_common_defines.h
services/group_manager/inc/session/bind_session/: bind_session_common.h
services/group_manager/src/: group_manager.c  group_manager_common.c
services/group_manager/src/bind_peer/: bind_peer.c
services/group_manager/src/broadcast_manager/: broadcast_manager.c
services/group_manager/src/channel_manager/soft_bus_channel/: soft_bus_channel.c
services/group_manager/src/group_manager/: group_common.c  group_manager.c
services/group_manager/src/group_operation/: group_operation.c  group_operation_common.c
services/group_manager/src/group_operation/across_account_group/: across_account_group.c
services/group_manager/src/group_operation/identical_account_group/: identical_account_group.c
services/group_manager/src/group_operation/peer_to_peer_group/: peer_to_peer_group.c
services/group_manager/src/group_operation/peer_to_peer_group_mock/: peer_to_peer_group_mock.c
services/group_manager/src/key_agree/: key_agree.c
services/group_manager/src/session/: bind_session_common_util.c
services/module/inc/: dev_auth_module_manager.h  module_common.h
services/module/inc/das_module/: das_common.h  das_module.h  task_main.h
services/module/inc/protocol/: protocol_common.h
services/module/src/: dev_auth_module_manager.c  version_util.c
services/module/src/das_module/: das_common.c  das_version_util.c  task_main.c
services/session/inc/auth_session/: auth_session_common.h  auth_session_util.h
services/session/inc/auth_session_lite/: auth_session_common_lite.h
services/session/inc/bind_session/: bind_session_common.h
services/session/src/: auth_session_common_util.c  session_manager.c
services/session/src/auth_session/: auth_session_client.c  auth_session_common.c  auth_session_server.c  auth_session_util.c
services/session/src/auth_session_lite/: auth_session_common_lite.c
services/session/src/bind_session/: bind_session_client.c  bind_session_common.c  bind_session_server.c
services/session/src/bind_session_lite/: bind_session_client_lite.c  bind_session_common_lite.c  bind_session_server_lite.c
(+320 files in other folders)
