# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("deviceauth_env.gni")

group("deviceauth_sdk_build") {
  if (os_level == "standard" || os_level == "small") {
    deps = [ "services:deviceauth_sdk" ]
  }
}

group("deviceauth_service_build") {
  if (os_level == "standard" || os_level == "small") {
    deps = [ "services:deviceauth_service" ]
  }
}

group("deviceauth_build") {
  deps = [ "services:deviceauth" ]
}

group("deviceauth_test_build") {
  deps = []
  if (os_level == "standard") {
    testonly = true
    deps += [
      "test/fuzztest/group_auth_fuzz_test/authDevice_fuzzer:fuzztest",
      "test/fuzztest/group_auth_fuzz_test/ga_processData_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/addMemberToGroup_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/checkAccessToGroup_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/createGroup_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/deleteGroup_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/deleteMemberFromGroup_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getDeviceInfoById_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getGroupInfoById_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getGroupInfo_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getJoinedGroups_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getPkInfoList_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getRegisterInfo_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getRelatedGroups_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/getTrustedDevices_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/gm_processData_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/isDeviceInGroup_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/regCallback_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/regDataChangeListener_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/unRegCallback_fuzzer:fuzztest",
      "test/fuzztest/group_manager_fuzz_test/unRegDataChangeListener_fuzzer:fuzztest",
      "test/unittest/deviceauth:deviceauth_llt",
    ]
  }
}
